--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="hero" class="d-flex flex-column justify-content-end align-items-center p-0">
     <div id="heroCarousel" class="carousel slide w-100" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-item slide-1 active">
-        <div class="imageoverlay"></div>
+
         <div class="carousel-container container">
           <p class="subtext">Digital Management Consulting</p>
           <h1>Realize your <br>future faster.</h1>
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="carousel-item slide-2">
-        <div class="imageoverlay"></div>
+
         <div class="carousel-container container">
           <p class="subtext">Technical Audits</p>
           <h1>Empowering the <br> world around us<br> through technology</h1>
@@ -66,11 +66,10 @@
             your business.
           </p>
           <a href="#" class="btn-get-started ">LEARN MORE</a>
-
         </div>
       </div>
       <div class="carousel-item slide-3">
-        <div class="imageoverlay"></div>
+
         <div class="carousel-container container">
           <p class="subtext">Digital Transformation Consulting</p>
           <h1>Digitally <br> transforming <br>your business</h1>
@@ -92,29 +91,19 @@
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about d-none d-sm-block">
-      <img src="assets/img/about-you.svg" class="rightimg">
       <div class="container">
         <div class="row content" data-aos="fade-up">
-          <div class="col-md-7  col-lg-6 col-xl-7" style="padding-right: 0px;">
+          <div class="col-xl-12">
+            <div class="section-title">
+              <h2>What we do.</h2>
+            </div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna
               aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-              varius.
+              varius. Lorem
+              ipsum dolor sit amet,
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna
-              aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-              varius.
-            </p>
-            <p class="mr-btm-56">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor
-              incididunt ut labore et
-              dolore magna
-              aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-              varius.
-            </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
           </div>
         </div>
       </div>
@@ -122,14 +111,9 @@
     <!-- End About Section -->
     <!-- ======= services Section ======= -->
     <section id="services" class="services d-none d-sm-block">
-      <div class="container">
-        <div class="section-title">
-          <h2>Our Service Offerings</h2>
-          <p>Powering your business to be a digital force in the industry</p>
-        </div>
-      </div>
       <div class="container-fluid p-0">
         <div class="row">
+          <!--service-1-->
           <div class="bluebox">
             <div class="content">
               <h3>Digital<br> Transformation</h3>
@@ -139,35 +123,72 @@
             </div>
           </div>
           <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/digital-transformation.png">
+            </div>
+          </div>
+          <!--end-->
+          <!--service-2-->
+          <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/product-development.png">
+            </div>
+          </div>
+          <div class="bluebox">
             <div class="content">
               <h3>Product<br> Development</h3>
               <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
               <a href="#" class="btn-learn-more">
-                <img src="assets/img/icon/arrowright-black.svg"> </a>
+                <img src="assets/img/icon/rightarrow.svg"> </a>
             </div>
           </div>
+          <!--end-->
+          <!--service-3-->
           <div class="bluebox">
             <div class="content">
-              <h3>Insiprational Design</h3>
-              <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
-              <a href="#" class="btn-learn-more">
-                <img src="assets/img/icon/arrowright-black.svg"> </a>
-            </div>
-          </div>
-          <div class="bluebox">
-            <div class="content">
-              <h3>Managed<br>Engineering Pods</h3>
+              <h3>Experience Design</h3>
               <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
               <a href="#" class="btn-learn-more">
                 <img src="assets/img/icon/rightarrow.svg"> </a>
             </div>
           </div>
           <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/experience-design.png">
+            </div>
+          </div>
+          <!--end-->
+          <!--service-4-->
+          <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/engineering-pods.png">
+            </div>
+          </div>
+          <div class="bluebox">
             <div class="content">
-              <h3>Experience Audit</h3>
+              <h3>Engineering Pods</h3>
               <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
               <a href="#" class="btn-learn-more">
                 <img src="assets/img/icon/rightarrow.svg"> </a>
+            </div>
+          </div>
+          <!--end-->
+          <div class="bluebox">
+            <div class="content">
+              <h3>UX Audits</h3>
+              <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
+              <a href="#" class="btn-learn-more">
+                <img src="assets/img/icon/rightarrow.svg"> </a>
+            </div>
+          </div>
+          <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/ux-audits.png">
+            </div>
+          </div>
+          <div class="bluebox">
+            <div class="imagecontent">
+              <img src="assets/img/services/technical-audits.png">
             </div>
           </div>
           <div class="bluebox">
@@ -175,7 +196,7 @@
               <h3>Technical Audits</h3>
               <p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
               <a href="#" class="btn-learn-more">
-                <img src="assets/img/icon/arrowright-black.svg"> </a>
+                <img src="assets/img/icon/rightarrow.svg"> </a>
             </div>
           </div>
         </div>
@@ -229,114 +250,31 @@
     </section>
     <!--end mobile view-->
     <!-- End services Section -->
-    <!-- ======= casestudy Section ======= -->
-    <section id="casestudy" class="casestudy">
+    <!--who we are-->
+    <section class="whoweare" id="whoweare">
       <div class="container">
-        <div class="section-title">
-          <h2>Case Study Title</h2>
-        </div>
         <div class="row content">
-          <div class="col-lg-8">
-            <div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
-              style="overflow:hidden">
-              <div class="carousel-item  active">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p class="mr-btm-56">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <a href="#" class="btn-learn-more">
-                  Learn More
-                </a>
-              </div>
-              <div class="carousel-item">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p class="mr-btm-56">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <a href="#" class="btn-learn-more">
-                  Learn More
-                </a>
-              </div>
-              <div class="carousel-item ">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <p class="mr-btm-56">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
-                  varius.
-                </p>
-                <a href="#" class="btn-learn-more">
-                  Learn More
-                </a>
-              </div>
-
-
-
-
-
+          <div class="col-md-12">
+            <div class="section-title">
+              <h2>Who we are.</h2>
             </div>
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="0" class="active"></button>
-              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="1"></button>
-              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="2"></button>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <img src="assets/img/casestudy.svg" class="img-fluid casestudyimg">
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna
+              aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+              varius. Lorem
+              ipsum dolor sit amet,</p>
+            <a href="#" class="btn-learn-more">LEARN MORE</a>
           </div>
         </div>
       </div>
     </section>
-    <!-- End casestudy Section -->
+    <!--end-->
     <!-- ======= Goal Section ======= -->
     <section id="goal" class="goal">
       <div class="container">
         <div class="section-title">
-          <h2>What is your goal today?</h2>
-          <p>Our team has success
-            in delivering
-            solutions
-          </p>
+          <h2>Enterprise Goals.</h2>
+
         </div>
         <div class="row">
           <div class="columnbox3">
@@ -453,6 +391,105 @@
       </div>
     </section>
     <!-- End Goal Section -->
+    <!-- ======= casestudy Section ======= -->
+    <section id="casestudy" class="casestudy">
+      <div class="container">
+        <div class="section-title">
+          <h2>Our Impact</h2>
+        </div>
+        <div class="row content">
+          <div class="col-lg-8">
+            <div id="casstudyCarousel" class="carousel slide " data-bs-ride="carousel" data-bs-interval="5000"
+              style="overflow:hidden">
+              <div class="carousel-item  active">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p class="mr-btm-56">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <a href="#" class="btn-learn-more">
+                  Learn More
+                </a>
+              </div>
+              <div class="carousel-item">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p class="mr-btm-56">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <a href="#" class="btn-learn-more">
+                  Learn More
+                </a>
+              </div>
+              <div class="carousel-item ">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <p class="mr-btm-56">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna
+                  aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu risus quis
+                  varius.
+                </p>
+                <a href="#" class="btn-learn-more">
+                  Learn More
+                </a>
+              </div>
+
+
+
+
+
+            </div>
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="0" class="active"></button>
+              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="1"></button>
+              <button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="2"></button>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <img src="assets/img/casestudy.svg" class="img-fluid casestudyimg">
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End casestudy Section -->
   </main>
   <!-- End #main -->
   <!-- ======= Footer ======= -->
