--- a/career.html
+++ b/career.html
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link active" href="about">ABOUT</a></li>
+					<li><a class="nav-link" href="about">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
@@ -47,7 +47,7 @@
 						</ul>
 					</li>
 					<li><a class="nav-link" href="#">Services</a></li>
-					<li><a class="nav-link" href="career">CAREERS</a></li>
+					<li><a class="nav-link active" href="career">CAREERS</a></li>
 					<li><a class="nav-link contactus" href="contact">Contact</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
@@ -56,10 +56,11 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
+		style="background: url(assets/img/career/banner.png);">
 		<div class="banner-container container">
-			<p class="subtext">Gial sub-title if desired</p>
-			<h1>About Us</h1>
+			<p class="subtext">Work with us</p>
+			<h1>Solve the biggest challenges faced by enterprises.</h1>
 			<p>Leading business transformation through High-Impact
 				digital solutions.
 			</p>
@@ -74,9 +75,11 @@
 					<div class="col-xl-12">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
+							labore et
+							dolore magna
 							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
+							risus quis
+							varius. Lorem
 							ipsum dolor sit amet,
 						</p>
 					</div>
@@ -84,55 +87,25 @@
 			</div>
 		</section>
 		<!-- End Overview Section -->
-		<!-- ======= Our track record======= -->
-		<section class=" worldaround">
-			<div class="container container-xs">
+		<!--Intro-->
+		<section class="companyintro">
+			<div class="container-fluid p-0">
 				<div class="row">
-					<div class="col-12">
-						<div class="section-title">
-							<h2>Our track record</h2>
+					<div class="bluebox">
+						<div class="content">
+							<h3>A few words that define us</h3>
+							<p>Risus nullam eget felis eget nunc lobortis. Sagittis orci a scelerisque.</p>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>$250M</h3>
-							<p>Revenue Enabled through Digital Implementations.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>$20M+</h3>
-							<p>Operational Cost
-								Savings</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>100+</h3>
-							<p>Team members across
-								the world</p>
+					<div class="bluebox">
+						<div class="imagecontent">
+							<img src="assets/img/career/intro.png">
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!--end Our track record-->
-		<!--Our Vision-->
-		<section class="vision">
-			<div class="container container-xs">
-				<div class="row">
-					<div class="col-12">
-						<div class="section-title">
-							<div class="subtext">OUR VISION</div>
-							<h2>Democratizing technology for mid-market enterprises</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--End Our Vision-->
+		<!--end Intro-->
 		<!--Values-->
 		<section class="values">
 			<div class="container container-xs">
@@ -162,102 +135,57 @@
 			</div>
 		</section>
 		<!--End Values-->
-		<!--Defined by our people-->
-		<section class="description">
+		<!--Opportunities-->
+		<section class="opportunities">
 			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Defined by our people</h2>
-				</div>
-				<div class="row content">
-					<div class="col-12">
+				<div class="row description">
+					<div class="col-12 content">
+						<div class="section-title">
+							<h2>Opportunities</h2>
+						</div>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
+							labore et
+							dolore magna
 							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
+							risus quis
+							varius. Lorem
 							ipsum dolor sit amet,</p>
-						<img src="assets/img/our-people.png" class="img-fluid w-100">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="career-position">
+							<h3>Product Manager</h3>
+							<p>Open positions: 2</p>
+							<a href="#">Apply Now</a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="career-position">
+							<h3>Lead Product Designer</h3>
+							<p>Open positions: 1</p>
+							<a href="#">Apply Now</a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="career-position">
+							<h3>Project Manager</h3>
+							<p>Open positions: 2</p>
+							<a href="#">Apply Now</a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="career-position">
+							<h3>Executive Assistant</h3>
+							<p>Open positions: 1</p>
+							<a href="#">Apply Now</a>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!--end Defined by our people-->
-		<!--Subject matter experts-->
-		<section class="description">
-			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Subject matter experts</h2>
-				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,</p>
+		<!--end Opportunies-->
 
-					</div>
-				</div>
-				<div class="row masonry-layout">
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Strategy & Insights</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Product Management</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Digital Product Design</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Engineering & QA</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Product Marketing</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Delivery & DevOps</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</section>
-		<!--end Subject matter experts-->
 		<!--location-->
 		<section class="location">
 			<div class="container container-xs description">
