--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link active" href="about">ABOUT</a></li>
+					<li><a class="nav-link" href="about">ABOUT</a></li>
 					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
 								class="bi bi-chevron-down"></i></a>
 						<ul>
@@ -56,10 +56,11 @@
 	</header>
 	<!-- End Header -->
 	<!-- ======= Hero Section ======= -->
-	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0">
+	<section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0"
+		style="background: url(assets/img/career/banner.png);">
 		<div class="banner-container container">
-			<p class="subtext">Gial sub-title if desired</p>
-			<h1>About Us</h1>
+			<p class="subtext"></p>
+			<h1>Contact us</h1>
 			<p>Leading business transformation through High-Impact
 				digital solutions.
 			</p>
@@ -74,190 +75,55 @@
 					<div class="col-xl-12">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
+							labore et
+							dolore magna
 							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
+							risus quis
+							varius. Lorem
 							ipsum dolor sit amet,
 						</p>
 					</div>
 				</div>
 			</div>
+			<div class="container container-xs">
+				<div class="row">
+					<div class="col-md-8">
+						<form class="contact-form" id="contactform">
+							<div class="row">
+								<div class="form-group col-md-6">
+									<label>Name*</label>
+									<input class="form-control">
+								</div>
+								<div class="form-group col-md-6">
+									<label>Email*</label>
+									<input class="form-control">
+								</div>
+								<div class="form-group col-md-12">
+									<label>Message*</label>
+									<textarea class="form-control"></textarea>
+								</div>
+								<div class="col-md-4 recaptcha" id="g-recaptcha1" style="margin-bottom: 24px;"></div>
+								<div class="col-12">
+									<button type="button">Submit</button>
+								</div>
+
+							</div>
+						</form>
+					</div>
+					<div class="col-md-4">
+						<div class="enquiry">
+							<h4>Media Inquiries</h4>
+							<p>Email Us: <a href="mailto:media@torinit.com">media@torinit.com</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 		<!-- End Overview Section -->
-		<!-- ======= Our track record======= -->
-		<section class=" worldaround">
-			<div class="container container-xs">
-				<div class="row">
-					<div class="col-12">
-						<div class="section-title">
-							<h2>Our track record</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>$250M</h3>
-							<p>Revenue Enabled through Digital Implementations.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>$20M+</h3>
-							<p>Operational Cost
-								Savings</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbox">
-							<h3>100+</h3>
-							<p>Team members across
-								the world</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--end Our track record-->
-		<!--Our Vision-->
-		<section class="vision">
-			<div class="container container-xs">
-				<div class="row">
-					<div class="col-12">
-						<div class="section-title">
-							<div class="subtext">OUR VISION</div>
-							<h2>Democratizing technology for mid-market enterprises</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--End Our Vision-->
-		<!--Values-->
-		<section class="values">
-			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Driven by our values</h2>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="whitebgbox">
-							<h3>Empathy</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="whitebgbox">
-							<h3>Accountability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="whitebgbox">
-							<h3>Reliability</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--End Values-->
-		<!--Defined by our people-->
-		<section class="description">
-			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Defined by our people</h2>
-				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,</p>
-						<img src="assets/img/our-people.png" class="img-fluid w-100">
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--end Defined by our people-->
-		<!--Subject matter experts-->
-		<section class="description">
-			<div class="container container-xs">
-				<div class="section-title">
-					<h2>Subject matter experts</h2>
-				</div>
-				<div class="row content">
-					<div class="col-12">
-						<p class="mr-btm-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor
-							incididunt ut
-							labore et dolore magna
-							aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi non arcu
-							risus quis varius. Lorem
-							ipsum dolor sit amet,</p>
 
-					</div>
-				</div>
-				<div class="row masonry-layout">
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Strategy & Insights</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Product Management</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Digital Product Design</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Engineering & QA</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Product Marketing</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="contentbluebox">
-							<h3>Delivery & DevOps</h3>
-							<p>Enterprises leave repeat sales on the table with existing and past clients by not
-								investing in loyalty
-								programs and
-								re-targeting initiatives even though.</p>
-						</div>
-					</div>
 
-				</div>
-			</div>
-		</section>
-		<!--end Subject matter experts-->
+
+
 		<!--location-->
 		<section class="location">
 			<div class="container container-xs description">
@@ -316,7 +182,7 @@
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
-						<a href="contact" class="btn-learn-more">Contact Us</a>
+						<a href="#contactform" class="btn-learn-more">Contact Us</a>
 					</div>
 				</div>
 			</div>
@@ -359,6 +225,20 @@
 	</footer>
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback"></script>
+	<script>
+		setTimeout(function () {
+
+			$('.recaptcha').each(function () {
+				grecaptcha.render(this.id, {
+					'sitekey': '6LdVkwkUAAAAACeeETRX--v9Js0vWyjQOTIZxxeB',
+					"theme": "light"
+				});
+			});
+
+		}, 2000);
+	</script>
 </body>
 
 </html>
