--- a/goals/accelerate-revenues.html
+++ b/goals/accelerate-revenues.html
@@ -13,6 +13,7 @@
 	<link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 	<link href="../assets/css/style.css" rel="stylesheet">
+	<link href="../assets/css/responsive.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,18 +21,34 @@
 	<header id="header" class="d-block align-items-center  header-transparent ">
 		<div class="container-fluid d-flex align-items-center justify-content-between">
 			<div class="logo d-none d-sm-block">
-				<h1><a href="../index.html"><img src="../assets/img/logo.svg"></a></h1>
+				<h1><a href="../index"><img src="../assets/img/logo.svg"></a></h1>
 			</div>
 			<div class="logo d-block d-sm-none">
-				<h1><a href="../index.html"><img src="../assets/img/mobile-logo.svg"></a></h1>
+				<h1><a href="../index"><img src="../assets/img/mobile-logo.svg"></a></h1>
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a class="nav-link" href="../about.html">ABOUT</a></li>
-					<li><a class="nav-link" href="#">Solutions</a></li>
+					<li><a class="nav-link " href="../about">ABOUT</a></li>
+					<li class="dropdown"><a class="nav-link active" href="#"><span>Solutions</span> <i
+								class="bi bi-chevron-down"></i></a>
+						<ul>
+							<li><a href="../goals/accelerate-revenues.html">Optimize Operations</a></li>
+							<li><a href="../goals/accelerate-revenues.html">Accelerate
+									Revenues</a></li>
+							<li><a href="../goals/accelerate-revenues.html">Harness the power of data and analytics</a>
+							</li>
+							<li><a href="../goals/accelerate-revenues.html">Modernize core
+									technologies</a></li>
+							<li><a href="../goals/accelerate-revenues.html">Create
+									stunning digital
+									experiences</a></li>
+							<li><a href="../goals/accelerate-revenues.html">Empower
+									customer success</a></li>
+						</ul>
+					</li>
 					<li><a class="nav-link" href="#">Services</a></li>
-					<li><a class="nav-link" href="#">CAREERS</a></li>
-					<li><a class="nav-link contactus" href="#">Contact</a></li>
+					<li><a class="nav-link" href="../career">CAREERS</a></li>
+					<li><a class="nav-link contactus" href="../contact">Contact</a></li>
 				</ul>
 				<i class="bi bi-list mobile-nav-toggle"></i>
 			</nav>
@@ -180,7 +197,7 @@
 		<!--End Torinit approach-->
 
 		<!-- ======= casestudy Section ======= -->
-		<section id="casestudy" class="casestudy">
+		<section id="casestudy" class="casestudy casestudyinner">
 			<div class="container container-xs">
 				<div class="section-title">
 					<h2>Our Impact</h2>
@@ -203,42 +220,13 @@
 									Learn More
 								</a>
 							</div>
-							<div class="carousel-item">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
-							<div class="carousel-item ">
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-									incididunt ut labore
-									et dolore magna
-									aliqua. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Dolor morbi
-									non arcu risus quis
-									varius.
-								</p>
-								<a href="#" class="btn-learn-more">
-									Learn More
-								</a>
-							</div>
+
+
 						</div>
-						<div class="carousel-indicators">
-							<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="0"
-								class="active"></button>
-							<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="1"></button>
-							<button type="button" data-bs-target="#casstudyCarousel" data-bs-slide-to="2"></button>
-						</div>
+
 					</div>
 					<div class="col-lg-5">
-						<img src="../assets/img/casestudy.svg" class="img-fluid casestudyimg">
+						<img src="../assets/img/our-impact.png" class="img-fluid casestudyimg">
 					</div>
 				</div>
 			</div>
@@ -252,7 +240,7 @@
 						<h3>Connect with us to learn more</h3>
 					</div>
 					<div class="col-md-4 align-self-center">
-						<a href="#" class="btn-learn-more">Learn More</a>
+						<a href="../contact" class="btn-learn-more">Contact Us</a>
 					</div>
 				</div>
 			</div>
@@ -261,29 +249,31 @@
 	</main>
 	<!-- End #main -->
 	<!-- ======= Footer ======= -->
-	<footer id="footer" class="d-none d-sm-block">
+	<footer id="footer">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 col-lg-6">
 					<img src="../assets/img/logo.svg" class="footer-logo">
 					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+					<div class="copyright d-none d-sm-block">
+						<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
+					</div>
 				</div>
 				<div class="col-md-12 col-lg-6">
 					<div class="rightsidecontent">
 						<div class="footermenu">
 							<ul>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Service</a></li>
-								<li><a href="#">Offerings</a></li>
-								<li><a href="#">Case Studies</a></li>
-								<li><a href="#">Insights</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="../about">About</a></li>
+								<li><a href="#">Solutions</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="../career">Careers</a></li>
+								<li><a href="../contact">Contact</a></li>
 							</ul>
 						</div>
 						<div class="socialmedia">
 							<img src="../assets/img/icon/linkedin.svg"> Find us on LinkedIn
 						</div>
-						<div class="copyright">
+						<div class="copyright d-block d-sm-none">
 							<p>Copyright ©2021. <a href="https://torinit.com/">Torinit Technologies Inc.</a></p>
 						</div>
 					</div>
